# CANI_DAPP

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
did/: canistore_dao.did  canistore_space.did
src/canistore_dao/: Cargo.toml
src/canistore_dao/src/: api_cycles.rs  api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  guards.rs  lib.rs  store.rs
src/canistore_frontend/: package.json
src/canistore_frontend/src/: App.jsx
src/canistore_indexer/: Cargo.toml
src/canistore_indexer/src/: api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  lib.rs  store.rs
src/canistore_oss_bucket/: Cargo.toml  canistore_oss_bucket.did
src/canistore_oss_bucket/src/: api_admin.rs  api_cycles.rs  api_http.rs  api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  guards.rs  lib.rs  permission.rs  store.rs
src/canistore_platform/: Cargo.toml  canistore_platform.did
src/canistore_platform/src/: api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  guards.rs  lib.rs  store.rs
src/canistore_space/: Cargo.toml
src/canistore_space/src/: api_cycles.rs  api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  canister_service.rs  guards.rs  lib.rs  pay.rs  store.rs  utils.rs
src/canistore_types/: Cargo.toml
src/canistore_types/src/: certificate.rs  constant.rs  cose.rs  dao.rs  error.rs  file.rs  indexer.rs  lib.rs  license.rs  message.rs  payment.rs  platform.rs  space.rs  user.rs
src/canistore_user/: Cargo.toml  canistore_user.did
src/canistore_user/src/: api_init.rs  api_query.rs  api_update.rs  candid_file_generator.rs  guards.rs  lib.rs  pay.rs  store.rs
