[workspace]
members = [
    "src/canistore_dao",
    "src/canistore_user",
    "src/canistore_space",
    "src/canistore_platform",
    "src/canistore_indexer",
    "src/canistore_types",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytes = "1"
base64 = "0.21"
candid = "0.10"
ciborium = "0.2"
ciborium-io = "0.2"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
serde_cbor = "0.11.2"
structured-logger = "1"
ic-cdk = "0.15"
ic-cdk-timers = "0.8"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1.6"
ic-ledger-types = "0.13.0"
ic-http-certification = { version = "2.5", features = ["serde"] }
ic-certified-map = "0.4"
crc32fast = "1.4"
ed25519-dalek = "2"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
num-traits = "0.2"
url = "2.5"
once_cell = "1.19"
lazy_static = "1.4"
getrandom = { version = "0.2", features = ["custom"] }
