[package]
name = "canistore_oss_bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
icrc-ledger-types = { workspace = true }
getrandom = { workspace = true }
lazy_static = "1.4"
hyperx = { git = "https://github.com/ldclabs/hyperx", rev = "4b9bd373b8c4d29a32e59912bf598ba69273c032" }
canistore-types = { path = "../canistore_types", version = "0.1" }
canistore-certificate = { path = "../canistore_certificate", version = "0.1" }
