[package]
name = "canistore-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }
num-traits = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
icrc-ledger-types = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
coset = "0.3.8"
